...
        android:text="Refresh"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_title" />

    <ListView
        android:id="@+id/event_search_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:background="@color/listview_divider_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refresh"
...
