...
            android:textColor="@color/text_color"
            android:backgroundTint="@color/ui_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonFirstTimeUse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="First time use Lottery System?"
            android:textColor="@color/text_color"
            android:backgroundTint="@color/ui_background"
            app:layout_constraintStart_toStartOf="parent"
...
