...
            android:layout_height="82dp"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/view_background"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/entrant_event_join"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/entrant_event_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
