<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_background"
    tools:context=".EntrantMylistActivity">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/circle_background"
        android:contentDescription="Profile Image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/entrantName"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/entrantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name: Your name"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-1dp" />

    <Button
        android:id="@+id/buttonQRScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="QR Scan"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonEventSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@color/button_color"
        app:srcCompat="@android:drawable/ic_input_add"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonQRScan"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp" />

    <ListView
        android:id="@+id/entrant_mylist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/button_color"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonNotification"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Notification Button -->
    <Button
        android:id="@+id/buttonNotification"
        android:layout_width="129dp"
        android:layout_height="47dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_color"
        android:text="Notification"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonRefresh"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Notification Badge -->
    <TextView
        android:id="@+id/notification_badge"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/badge_background"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/buttonNotification"
        app:layout_constraintTop_toTopOf="@id/buttonNotification"
        android:layout_marginEnd="-8dp"
        android:layout_marginTop="-5dp" />

    <!-- Refresh Button -->
    <Button
        android:id="@+id/buttonRefresh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_color"
        android:text="Refresh"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonProfile"
        app:layout_constraintStart_toEndOf="@id/buttonNotification" />

    <!-- Profile Button -->
    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_color"
        android:text="Profile"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonRefresh" />

</androidx.constraintlayout.widget.ConstraintLayout>
