<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/listview_divider_color"
    android:padding="8dp"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/eventName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Event1"
        android:textColor="@color/text_color"
        android:layout_weight="1"
        android:layout_gravity="center_vertical" />

    <Button
        android:id="@+id/buttonEventStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Status"
        android:backgroundTint="@color/ui_background"
        android:textColor="@color/text_color" />

</LinearLayout>
