...
    <Button
        android:id="@+id/organizer_edit_event_activity_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/button_color"
        android:text="Upload"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/organizer_edit_event_activity_header"
...
